--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
-#/[Bb]uild/
+/[Bb]uild/
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
@@ -55,11 +55,11 @@ ExportedObj/
 # Unity3D generated file on crash reports
 sysinfo.txt
 
-## Builds
-#*.apk
-#*.aab
-#*.unitypackage
-#*.app
+# Builds
+*.apk
+*.aab
+*.unitypackage
+*.app
 
 # Crashlytics generated file
 crashlytics-build.properties
